updated some responses
