# api/controllers/index.js
@@ -4,4 +4,5 @@ function __export(m) {
 }
 Object.defineProperty(exports, "__esModule", { value: true });
 __export(require("./strategy.controller"));
+__export(require("./strategy-event.controller"));
 //# sourceMappingURL=index.js.map
