# api/controllers/index.ts
@@ -1,1 +1,2 @@
 export * from './strategy.controller';
+export * from './strategy-event.controller';
